WebKit/mac/WebView/WebPDFRepresentation.h
@@ -26,7 +26,7 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#import <Foundation/Foundation.h>
+#import "WebDocument.h"
 
 @protocol WebDocumentRepresentation;
 
